[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/BackgroundPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/view/CollectionView.tscn" type="PackedScene" id=2]
[ext_resource path="res://thridparty/big_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://gui/deck_list/CompareWindow.gd" type="Script" id=4]

[node name="CompareWindow" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" parent="." instance=ExtResource( 1 )]
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="AvailableCountLabel" type="Label" parent="BackgroundPanel/VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 496.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "0 Available Cards"
align = 1
uppercase = true

[node name="VSeparator" type="VSeparator" parent="BackgroundPanel/VBoxContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 504.0
margin_bottom = 40.0

[node name="MissingCountLabel" type="Label" parent="BackgroundPanel/VBoxContainer/HBoxContainer"]
margin_left = 508.0
margin_top = 4.0
margin_right = 1004.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "0 Missing Cards"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
margin_top = 44.0
margin_right = 1004.0
margin_bottom = 48.0

[node name="HBoxContainer2" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer"]
margin_top = 52.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_vertical = 3

[node name="AvailableView" parent="BackgroundPanel/VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 496.0
margin_bottom = 528.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="BackgroundPanel/VBoxContainer/HBoxContainer2"]
margin_left = 500.0
margin_right = 504.0
margin_bottom = 528.0

[node name="MissingView" parent="BackgroundPanel/VBoxContainer/HBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 508.0
margin_right = 1004.0
margin_bottom = 528.0
size_flags_horizontal = 3
size_flags_vertical = 3
